--- a/Délice.html
+++ b/Délice.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Sass/menu.css">
     <script src="https://kit.fontawesome.com/804671873b.js" crossorigin="anonymous"></script>
-    <title></title>
+    <title>Le délice des sens</title>
 </head>
 <body>
-    <div class="loader"></div>
-    <header>
+    <div class="loader"><img src="Sass/Sanji_Drapeau.jpg" class="imgcook"></img></div>
+    <section class="allmenu">
         <a href="index.html" class="arrow"><i class="fas fa-arrow-left" ></i></a>
         <div class="header">
         <img src="images/logo/ohmyfood.png"  alt="OhMyFooD" class="logoheader">
         </div>
-    </header>
     <section>
-        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du goût" class="bannerpic">
+        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash Page1.jpg" alt="La Palette du goût" class="bannerpic">
     </section>
     <section>
         <div class="menu">
@@ -24,80 +23,108 @@
             <h1>Le délice des sens</h1>
             <div class="heart"><i class="far fa-heart"></i></div>
         </div>
+        <div class="flexmenu">
         <div class="transition1">
         <div class="title"><h2><span>ENTR</span>ÉES</h2></div>
         <a class="sticker">
             <div class="txtsticker">
-                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="okposition"><div class="ok"><i class="fas fa-check-circle" ></i></div></div>
                 <div class="naming"><h3>Tartare de thon</h3></div>
-                <div class="sidedish"><p>Assaisonné au yuzu</p>
-                <div class="price1">25€</div></div>
+                <div class="sidedish">
+                <p>Assaisonné au yuzu</p>
+                <div class="price">25€</div>
+                </div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="naming"><h3>Bouchée de homard croustillant</h3></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div></div>
+                <div class="naming" id="naming"><h3>Bouchée de homard croustillant</h3></div>
                 <div class="sidedish"><p>Et sa farandole de petits légumes</p>
-                <div class="price2">35€</div></div>
+                <div class="price">35€</div></div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a  href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="naming"><h3>Velouté de cèpes</h3></div>
-                <div class="sidedish"><p>Aux truffes</p>
-                <div class="price3">20€</div></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
+                <div class="naming" id="naming"><h3>Velouté de cèpes</h3></div>
+                <div class="sidedish"><p>Aux truffe</p>
+                <div class="price">20€</div></div>
             </div>
         </a>
         </div> <!--Fin de div de transition1-->
     <div class= "transition2">
     <div class="title"><h2><span>PLAT</span>S</h2></div>
-        <a href="" class="sticker">
+        <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="naming"><h3>Poulet rôti aux herbes de Provence</h3></div>
-                <div class="sidedish"><p>Et sa crème de truffe</p>
-                <div class="price4">40€</div></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>    
+                <div class="naming" id="naming"><h3>Poulet rôti aux herbes de Provence</h3></div>
+                <div class="sidedish">
+                <div class="ellipsis"><p>Et sa crème de truffe</p></div>
+                <div class="price">40€</div></div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="naming"><h3>Langouste rôtie</h3></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
+                <div class="naming" id="naming"><h3>Langouste rôtie</h3></div>
                 <div class="sidedish"><p>Et ses légumes de saison</p>
-                <div class="price5">35€</div></div>
+                <div class="price">35€</div></div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="naming"><h3>Côte de boeuf Angus</h3></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
+                <div class="naming" id="naming"><h3>Côte de boeuf Angus</h3></div>
                 <div class="sidedish"><p>Et sa purée de panais</p>
-                <div class="price6">44€</div></div>
+                <div class="price">44€</div></div>
             </div>
         </a>
     </div><!--Fin de div de transition2-->
     <div class="transition3">
     <div class="title"><h2><span>DESS</span>ERTS</h2></div>
-        <a href="" class="sticker">
+        <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="naming"><h3>Farandole de dessert</h3>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
+                <div class="naming" id="naming"><h3>Farandole de desserts</h3></div>
                 <div class="sidedish"><p>Du chef</p>
-                <div class="price7">18€</div></div>
+                <div class="price">18€</div></div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="naming"><h3>Crème brulée</h3></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
+                <div class="naming" id="naming"><h3>Crème brulée</h3></div>
                 <div class="sidedish"><p>Revisitée</p>
-                <div class="price8">22€</div></div>
+                <div class="price">22€</div></div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="naming"><h3>Tiramisu</h3></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
+                <div class="naming" id="naming"><h3>Tiramisu</h3></div>
                 <div class="sidedish"><p>À la noisette</p>
-                <div class="price9">23€</div></div>
+                <div class="price">23€</div></div>
             </div>
         </a>
     </div><!--Fin de transition3-->
-        <a class="btn" href="">Commander</a>
+    </div>
+    <div class=movebtn><a class="btn" href="">Commander</a></div>
     <footer>
         <div class="footer">
             <h6>ohmyfood</h6>
@@ -115,5 +142,6 @@
         </div>  <!--fin de div du menu-->  
         </section>
     </footer> 
+    </section>
 </body>
 </html>
