--- a/Enchantée.html
+++ b/Enchantée.html
@@ -8,14 +8,14 @@
     <title>La note enchantée</title>
 </head>
 <body>
-    <div class="loader"><img src="Sass/6fb1e3f8.png" class="imgcook"></div>
+    <div class="loader"><img src="Sass/Sanji_Drapeau.jpg" class="imgcook"></div>
     <section class="allmenu">
         <a href="index.html" class="arrow"><i class="fas fa-arrow-left" ></i></a>
         <div class="header">
         <img src="images/logo/ohmyfood.png"  alt="OhMyFooD" class="logoheader">
         </div>
     <section>
-        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du goût" class="bannerpic">
+        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash Page1.jpg" alt="La Palette du goût" class="bannerpic">
     </section>
     <section>
         <div class="menu">
@@ -23,35 +23,47 @@
             <h1>La note enchantée</h1>
             <div class="heart"><i class="far fa-heart"></i></div>
         </div>
+        <div class="flexmenu">
         <div class="transition1">
         <div class="title"><h2><span>ENTR</span>ÉES</h2></div>
         <a class="sticker">
             <div class="txtsticker">
-                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Ravioles de foie gras</h3></div>
                 <div class="sidedish"><p>Accompagnés de leur crème à la truffe</p>
-                <div class="price1">25€</div></div>
+                <div class="price">25€</div></div>
             </div>
         </a>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Caviar osciètre</h3></div>
                 <div class="sidedish"><p>Sur blini à la farine de blé noir</p>
-                <div class="price2">35€</div></div>
+                <div class="price">35€</div></div>
             </div>
         </a>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Homard et espuma de potiron</h3></div>
                 <div class="sidedish"><p>Mariné aux zestes d'orange</p>
-                <div class="price3">20€</div></div>
+                <div class="price">20€</div></div>
             </div>
         </a>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Foie gras de canard cuit entier</h3></div>
                 <div class="sidedish"><p>Confiture de figue et pain toasté</p>
-                <div class="price3">35€</div></div>
+                <div class="price">35€</div></div>
             </div>
         </a>
         </div> <!--Fin de div de transition1-->
@@ -59,23 +71,32 @@
     <div class="title"><h2><span>PLAT</span>S</h2></div>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Noix de coquilles Saint-Jacques</h3></div>
                 <div class="sidedish"><p>Sur lit de purée de céleri-rave</p>
-                <div class="price4">40€</div></div>
+                <div class="price">40€</div></div>
             </div>
         </a>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Langoustine poêlée</h3></div>
                 <div class="sidedish"><p>Purée de patate douce</p>
-                <div class="price5">35€</div></div>
+                <div class="price">35€</div></div>
             </div>
         </a>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Mijoté de queue de boeuf</h3></div>
                 <div class="sidedish"><p>Et riz sauvage aux zestes de citron</p>
-                <div class="price6">44€</div></div>
+                <div class="price">44€</div></div>
             </div>
         </a>
     </div><!--Fin de div de transition2-->
@@ -83,27 +104,37 @@
     <div class="title"><h2><span>DESS</span>ERTS</h2></div>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Macaron noisette et chocolat</h3></div>
                 <div class="sidedish"><p>Glace au caramel brun et sel de Guérande</p>
-                <div class="price7">18€</div></div>
+                <div class="price">18€</div></div>
             </div>
         </a>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Baba au rhum revisité</h3></div>
                 <div class="sidedish"><p>Avec son coulis de citron</p>
-                <div class="price8">22€</div></div>
+                <div class="price">22€</div></div>
             </div>
         </a>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Tarte au citron meringuée</h3></div>
                 <div class="sidedish"><p>Déstructurée</p>
-                <div class="price9">23€</div></div>
+                <div class="price">23€</div></div>
             </div>
         </a>
     </div><!--Fin de transition3-->
-        <a class="btn" href="">Commander</a>
+    </div>
+        <div class=movebtn><a class="btn" href="">Commander</a></div>
     <footer>
         <div class="footer">
             <h6>ohmyfood</h6>
