--- a/Française.html
+++ b/Française.html
@@ -8,15 +8,15 @@
     <title>À la Française</title>
 </head>
 <body>
-    <div class="loader"></div>
-    <header>
+    <div class="loader"><img src="Sass/Sanji_Drapeau.jpg" class="imgcook"></img></div>
+    <section class="allmenu">
         <a href="index.html" class="arrow"><i class="fas fa-arrow-left" ></i></a>
         <div class="header">
         <img src="images/logo/ohmyfood.png"  alt="OhMyFooD" class="logoheader">
         </div>
     </header>
     <section>
-        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du goût" class="bannerpic">
+        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="La Palette du goût" class="bannerpic">
     </section>
     <section>
         <div class="menu">
@@ -24,28 +24,37 @@
             <h1>À la Française</h1>
             <div class="heart"><i class="far fa-heart"></i></div>
         </div>
+        <div class="flexmenu">
         <div class="transition1">
         <div class="title"><h2><span>ENTR</span>ÉES</h2></div>
         <a class="sticker">
             <div class="txtsticker">
-                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Tartare de poulpe acidulé</h3></div>
                 <div class="sidedish"><p>Aux zestes d'orange</p>
-                <div class="price1">25€</div></div>
+                <div class="price">25€</div></div>
             </div>
         </a>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Velouté de légumes d'antan</h3></div>
                 <div class="sidedish"><p>Carotte, panais, topinambour</p>
-                <div class="price2">35€</div></div>
+                <div class="price">35€</div></div>
             </div>
         </a>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Soupe à l'oignon</h3></div>
                 <div class="sidedish"><p>Revisitée</p>
-                <div class="price3">20€</div></div>
+                <div class="price">20€</div></div>
             </div>
         </a>
         </div> <!--Fin de div de transition1-->
@@ -53,23 +62,32 @@
     <div class="title"><h2><span>PLAT</span>S</h2></div>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Coquilles Saint-Jacques</h3></div>
                 <div class="sidedish"><p>Accompagnées d'une purée de panais</p>
-                <div class="price4">40€</div></div>
+                <div class="price">40€</div></div>
             </div>
         </a>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Magret de canard</h3></div>
                 <div class="sidedish"><p>Et parmentier de pommes de terre</p>
-                <div class="price5">35€</div></div>
+                <div class="price">35€</div></div>
             </div>
         </a>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Pigeonneau d’Ille-et-Vilaine</h3></div>
                 <div class="sidedish"><p>Sur son lit de gnocchis aux légumes</p>
-                <div class="price6">44€</div></div>
+                <div class="price">44€</div></div>
             </div>
         </a>
     </div><!--Fin de div de transition2-->
@@ -77,27 +95,37 @@
     <div class="title"><h2><span>DESS</span>ERTS</h2></div>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Pétales de violettes glacés</h3></div>
                 <div class="sidedish"><p>Et purée de noisettes</p>
-                <div class="price7">18€</div></div>
+                <div class="price">18€</div></div>
             </div>
         </a>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Fondant au chocolat</h3></div>
                 <div class="sidedish"><p>Revisité</p>
-                <div class="price8">22€</div></div>
+                <div class="price">22€</div></div>
             </div>
         </a>
         <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Millefeuille croustillant</h3></div>
                 <div class="sidedish"><p>Myrtilles et pâte d’amande</p>
-                <div class="price9">23€</div></div>
+                <div class="price">23€</div></div>
             </div>
         </a>
     </div><!--Fin de transition3-->
-        <a class="btn" href="">Commander</a>
+    </div>
+        <div class=movebtn><a class="btn" href="">Commander</a></div>
     <footer>
         <div class="footer">
             <h6>ohmyfood</h6>
@@ -115,5 +143,6 @@
         </div>  <!--fin de div du menu-->  
         </section>
     </footer> 
+    </section>
 </body>
 </html>
