--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
                     <a href="Palette.html"><img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="picture" alt="La palette du goût"></a>
                 <div class="txtrestaurants">
                     <div class="txtheart"><h4>La palette du goût</h4>
-                    <a class="heart1" href="javascript: void(0)"><i class="fas fa-heart"></i></a></div>
+                        <div class="heart"><a href="javascript: void(0)">
+                            <div class="empty"><img src="Sass/heart-svgrepo-com-2.svg"></div>
+                            <div class="full"><img src="Sass/heart-shape-silhouette_icon-icons.com_73533.svg"></a></div>
+                        </div>
                     </div>
                     <h5>Ménilmontant</h5>
-                    <img class="svg" src="Sass/heart-svgrepo-com.svg" alt="heart"></img>
                     </div>
                 </div>
             </div>
@@ -63,7 +65,7 @@
                     <a href="Enchantée.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash Page1.jpg" class="picture" alt="La note enchantée"></a>
                 <div class="txtrestaurants">
                     <div class="txtheart"><h4>La note enchanté</h4>
-                    <div class="heart2"><i class="far fa-heart"></i></div>
+                    <div class="heart"><i class="far fa-heart"></i></div>
                     </div>
                     <h5>Charonne</h5>
                     </div>
@@ -73,7 +75,7 @@
                 <a href="Française.html"><img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="picture" alt="A la française"></a>
             <div class="txtrestaurants">
                     <div class="txtheart"><h4>A la française</h4>
-                    <div class="heart3"><i class="far fa-heart"></i></div>
+                    <div class="heart"><i class="far fa-heart"></i></div>
                     </div>
                     <h5>Cité Rouge</h5>
             </div>
@@ -82,7 +84,7 @@
                 <a href="Délice.html"><img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash Page1.jpg" class="picture" alt="le délice des sens"></a>
              <div class="txtrestaurants">      
                     <div class="txtheart"><h4>Le délice des sens</h4>
-                    <div class="heart4"><i class="far fa-heart"></i></div>
+                    <div class="heart"><i class="far fa-heart"></i></div>
                     </div>
                     <h5>Folie-Méricourt</h5>
             </div>
