--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
         </div>
             <div class="containerlocation">
                 <div class="location">
-                    <i class="fas fa-map-marker-alt" class= "markerplace">
-                    </i><input type="text" textarea name="place" placeholder="Paris, Belleville" class="txtlocation"></div>
+                    <i class="fas fa-map-marker-alt">
+                    </i><input type="text" placeholder="Paris, Belleville" class="txtlocation"></div>
             </div>
     </header>
     <section class="first">
         <h1>Réservez le menu qui vous convient</h1>
         <h2>Découvrez des restaurants d'exception sélectionnés par nos soins</h2>
-        <div class=movebtn><a class="btn" href="#restaurants">Explorer nos restaurants</a></div>
+        <div class=movebtn>
+            <a class="btn" href="#restaurants">Explorer nos restaurants</a></div>
 
 </section>
     <section class="fonction">
@@ -30,19 +31,17 @@
                 <div class="number"><p>1</p></div>
                     <div class="btnfonction">
                         <div class= "pic1"><i class="fas fa-mobile-alt"></i></div><span>Choisissez un restaurant</span></div>
-                    </div>
             </div>
             <div class="containerbtn">
                 <div class="number"><p>2</p></div>
                     <div class="btnfonction">
                         <div class="pic0"><i class="fas fa-list"></i></div><span>Composez votre menu</span></div>
-                    </div>
             </div>
             <div class="containerbtn">
                 <div class="number"><p>3</p></div>
                     <div class="btnfonction">               
                         <div class="pic"><i class="fas fa-store"></i></div><span>Dégustez au restaurant</span></div>
-                    </div>
+            </div>
     </section>
         <h3>Restaurants</h3>
         <section class="restaurants" id="restaurants">
@@ -54,7 +53,9 @@
                     <div class="txtheart"><h4>La palette du goût</h4>
                         <div class="heart">
                             <div class="empty"><i class="far fa-heart"></i></div>
-                            <div class="full"><i class="fas fa-heart"></i></div>
+                            <input type="checkbox" id="check-click">
+                            <label for="check-click" class="full">
+                            <i class="fas fa-heart"></i></label>
                         </div>
                     </div>
                     <h5>Ménilmontant</h5>
@@ -64,13 +65,15 @@
             <div class="sticker">
                 <div class="containerpic">
                     <div class="new">Nouveau</div>
-                    <a href="Enchantée.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash Page1.jpg" class="picture" alt="La note enchantée"></a>
+                    <a href="Enchantée.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash-Page1.jpg" class="picture" alt="La note enchantée"></a>
                 <div class="txtrestaurants">
                     <div class="txtheart"><h4>La note enchanté</h4>
                         <div class="heart">
                             <div class="empty"><i class="far fa-heart"></i></div>
-                            <div class="full"><i class="fas fa-heart"></i></div>
-                            </div>
+                            <input type="checkbox" id="check-click2">
+                            <label for="check-click2" class="full2">
+                            <i class="fas fa-heart"></i></label>
+                        </div>
                     </div>
                     <h5>Charonne</h5>
                     </div>
@@ -82,20 +85,23 @@
                     <div class="txtheart"><h4>A la française</h4>
                         <div class="heart">
                             <div class="empty"><i class="far fa-heart"></i></div>
-                            <div class="full"><i class="fas fa-heart"></i></div>
+                            <input type="checkbox" id="check-click3">
+                            <label for="check-click3" class="full3">
+                            <i class="fas fa-heart"></i></label>
                         </div>
                     </div>
                     <h5>Cité Rouge</h5>
             </div>
             </div>
             <div class="sticker">
-                <a href="Délice.html"><img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash Page1.jpg" class="picture" alt="le délice des sens"></a>
+                <a href="Délice.html"><img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-Page1.jpg" class="picture" alt="le délice des sens"></a>
              <div class="txtrestaurants">      
                     <div class="txtheart"><h4>Le délice des sens</h4>
                         <div class="heart">
                             <div class="empty"><i class="far fa-heart"></i></div>
-                            <div class="full"><i class="fas fa-heart"></i></div>
-                    
+                            <input type="checkbox" id="check-click4">
+                            <label for="check-click4" class="full4">
+                            <i class="fas fa-heart"></i></label>
                         </div>
                     </div>
                     <h5>Folie-Méricourt</h5>
@@ -107,10 +113,12 @@
                 <h6>ohmyfood</h6>
                 <div class= "txtfooter">
                     <div class="proposition">
-                        <div class="ustensil"><i class="fas fa-utensils" ></div></i><span>Proposer votre restaurant</span><br>
+                        <div class="ustensil"><i class="fas fa-utensils"></i></div>
+                        <span>Proposer votre restaurant</span><br>
                     </div>
                     <div class="partnair">
-                        <div class="hands"><i class="fas fa-hands-helping" ></div></i><span>Devenir partenaire</span><br>
+                        <div class="hands"><i class="fas fa-hands-helping" ></i></div>
+                        <span>Devenir partenaire</span><br>
                     </div>
                         <div class="mentions"><span>Mentions légales</span></div>
                         <a href="mailto:ohmyfood@outlook.fr" class="contact"><span>Contact</span></a>
