--- a/Délice.html
+++ b/Délice.html
@@ -21,7 +21,12 @@
         <div class="menu">
         <div class="containername">
             <h1>Le délice des sens</h1>
-            <div class="heart"><i class="far fa-heart"></i></div>
+            <div class="heart">
+                <div class="empty"><i class="far fa-heart"></i></div>
+                            <input type="checkbox" id="check-click">
+                            <label for="check-click" class="full">
+                            <i class="fas fa-heart"></i></label>
+                </div>
         </div>
         <div class="flexmenu">
         <div class="transition1">
